# sonos-sabotage

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/: FUNDING.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
cli/: script.sh
src/: main.rs
