[package]
name = "sonos-sabotage"
version = "0.1.0"
authors = ["threesquared <ben@3sq.re>"]

[[bin]]
name = "sonos-sabotage"
path = "src/main.rs"

[dependencies]
sonos = "0.1.2"
clap = "~2.32"
schedule_recv = "0.1.0"
lazy_static = "1.0"
rand = "0.5"
regex = "1"

[replace]
"ssdp:0.6.0" = { git = "https://github.com/threesquared/ssdp-rs", branch = "interfaces" }
